<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FEN_listeCourse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#679865"
    android:textAlignment="center"
    tools:context=".ListeCourses">

    <TextView
        android:id="@+id/LBL_titreListe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="681dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/ma_liste"
        android:textColor="#4E342E"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/LISTE_achats"
        android:layout_width="0dp"
        android:layout_height="493dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="17dp"
        android:background="#679865"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/BTN_effectuerAchat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LBL_titreListe" />

    <Button
        android:id="@+id/BTN_effectuerAchat"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="54dp"
        android:background="#4E342E"
        android:fontFamily="@font/aclonica"
        android:text="@string/o_effectuer_mes_achats"
        app:layout_constraintBottom_toTopOf="@+id/BTN_continuerSelection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BTN_continuerSelection"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="19dp"
        android:background="#4E342E"
        android:fontFamily="@font/aclonica"
        android:text="@string/continuer_ma_s_lection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>