<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FEN_details_cocktails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#679865">

    <ListView
        android:id="@+id/LISTE_ingredient"
        android:layout_width="369dp"
        android:layout_height="317dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="12dp"
        android:background="#679865"
        app:layout_constraintBottom_toTopOf="@+id/BTN_ajouter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutDescription"
        app:layout_constraintVertical_bias="0.917" />

    <Button
        android:id="@+id/BTN_retour"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="19dp"
        android:background="#4E342E"
        android:fontFamily="@font/aclonica"
        android:text="@string/retour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BTN_ajouter"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="54dp"
        android:background="#4E342E"
        android:fontFamily="@font/aclonica"
        android:text="@string/ajouter_ma_liste"
        app:layout_constraintBottom_toTopOf="@+id/BTN_retour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutDescription"
        android:layout_width="346dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="33dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/TBX_multiLine_description"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:editable="true"
            android:ems="10"
            android:fontFamily="@font/aclonica"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:isScrollContainer="false"
            android:scrollHorizontally="true"
            android:text="Description"
            android:textColor="#4E342E"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/LBL_nomCocktail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="43dp"
        android:fontFamily="@font/aclonica"
        android:text="TextView"
        android:textColor="#4E342E"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutDescription"
        app:layout_constraintEnd_toStartOf="@+id/BTN_moins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/BTN_plus"
        android:layout_width="36dp"
        android:layout_height="28dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="17dp"
        android:background="#4E342E"
        android:fontFamily="@font/aclonica"
        android:text="@string/plus"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TEXT_nbr_pers"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TEXT_pour"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/pour"
        android:textColor="#4E342E"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutDescription"
        app:layout_constraintEnd_toStartOf="@+id/BTN_moins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BTN_moins"
        android:layout_width="34dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="15dp"
        android:background="#4E342E"
        android:fontFamily="@font/aclonica"
        android:text="@string/moins"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutDescription"
        app:layout_constraintEnd_toStartOf="@+id/TEXT_nbr_pers"
        app:layout_constraintStart_toEndOf="@+id/TEXT_pour"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TEXT_nbr_pers"
        android:layout_width="65sp"
        android:layout_height="27dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/aclonica"
        android:textAlignment="center"
        android:textColor="#4E342E"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutDescription"
        app:layout_constraintEnd_toStartOf="@+id/BTN_plus"
        app:layout_constraintStart_toEndOf="@+id/BTN_moins"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>